# imr

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  checkerboard.glsl  main.cpp
examples/10_framebuffer/: 10_framebuffer.cpp  CMakeLists.txt
examples/10_intro/: 10_intro.cpp  CMakeLists.txt
examples/11_present_image/: 11_present_image.cpp  CMakeLists.txt
examples/12_compute_shader/: 12_compute_shader.cpp  12_compute_shader.glsl  CMakeLists.txt
examples/13_compute_triangle/: 13_compute_triangle.cpp  13_compute_triangle.glsl  CMakeLists.txt
examples/14_compute_cube/: 14_compute_cube.cpp  14_compute_cube.glsl  CMakeLists.txt
examples/15_compute_cubes/: 15_compute_cubes.cpp  15_compute_cubes.glsl  15_compute_cubes_batched.glsl  15_compute_cubes_instanced.glsl  15_compute_cubes_pipelined_raster.glsl  15_compute_cubes_pipelined_triangles.glsl  CMakeLists.txt
examples/20_graphics_pipeline/: 20_graphics_pipeline.cpp  20_graphics_pipeline.frag  20_graphics_pipeline.vert  CMakeLists.txt
examples/20_render_pipeline/: 20_render_pipeline.cpp  CMakeLists.txt  initializers.h
examples/20_render_pipeline/libs/: camera.h  ra_math.h  random.h
examples/20_render_pipeline/shaders/: CMakeLists.txt  math.h  noise.glsl  noise.h  shader.frag  shader.frag.cpp  shader.vert  shader.vert.cpp
examples/21_rt_pipeline/: 21_raygen.rgen  21_rt_pipeline.cpp  21_rt_pipeline.vert  CMakeLists.txt
examples/30_port_raytracingbasic/: 30_rayracingbasic.cpp  CMakeLists.txt  closesthit.rchit  miss.rmiss  raygen.rgen
examples/31_rt_pipeline/: 31_closesthit.rchit  31_miss.rmiss  31_rt_pipeline.cpp  CMakeLists.txt
examples/common/: camera.cpp  camera.h  imr_math.h
examples/present_from_buffer/: CMakeLists.txt  present_from_buffer.cpp
examples/present_from_image/: CMakeLists.txt  present_from_image.cpp  present_from_image.glsl
examples/swapchain_repro/: CMakeLists.txt  swapchain_repro.cpp
hag/: CMakeLists.txt
hag/include/hag/: hag.h  util.h
hag/src/: context.cpp  hag.cpp  hag_private.h  image.cpp  swapchain.cpp  util.c
imr/: CMakeLists.txt
imr/include/imr/: imr.h  util.h
imr/src/: accelerationStructure.cpp  buffer.cpp  context.cpp  descriptor_bind_helper.cpp  device.cpp  execute_commands.cpp  fps_counter.cpp  frame.cpp  graphics_pipeline.cpp  image.cpp  imr_private.h  present_helpers.cpp  render_simplified.cpp  render_targets_helper.cpp  rt_pipeline.cpp  shader.cpp  shader_private.h  swapchain.cpp  swapchain_private.h  util.c
sigcraft/: CMakeLists.txt  camera.h  chunk_mesh.cpp  chunk_mesh.h  main.cpp  world.cpp  world.h
sigcraft/enklume/: CMakeLists.txt
sigcraft/enklume/include/enklume/: block_data.h  enklume.h  nbt.h  support.h
sigcraft/enklume/src/: block_data.c  enklume.c  enklume_test.c  nbt.c  nbt_print.c  nbt_test.c  support.c  support_private.h  zlib_wrap.c
sigcraft/enklume/test/: level.nbt
sigcraft/shaders/: basic.frag  basic.vert
