#add_subdirectory(10_intro)
add_subdirectory(11_present_image)
add_subdirectory(12_compute_shader)
add_subdirectory(13_compute_triangle)
add_subdirectory(14_compute_cube)
add_subdirectory(15_compute_cubes)
add_subdirectory(20_graphics_pipeline)
add_subdirectory(21_rt_pipeline)

# add_subdirectory(30_port_raytracingbasic)

add_subdirectory(present_from_buffer)
add_subdirectory(present_from_image)
