add_executable(15_compute_cubes 15_compute_cubes.cpp ../common/camera.cpp)
target_link_libraries(15_compute_cubes imr nasl::nasl)

add_custom_target(15_compute_cubes_spv COMMAND ${GLSLANG_EXE} -V -S comp ${CMAKE_CURRENT_SOURCE_DIR}/15_compute_cubes.glsl -o ${CMAKE_CURRENT_BINARY_DIR}/15_compute_cubes.spv)
add_dependencies(15_compute_cubes 15_compute_cubes_spv)
add_custom_target(15_compute_cubes_batched_spv COMMAND ${GLSLANG_EXE} -V -S comp ${CMAKE_CURRENT_SOURCE_DIR}/15_compute_cubes_batched.glsl -o ${CMAKE_CURRENT_BINARY_DIR}/15_compute_cubes_batched.spv)
add_dependencies(15_compute_cubes 15_compute_cubes_batched_spv)
add_custom_target(15_compute_cubes_instanced_spv COMMAND ${GLSLANG_EXE} -V -S comp ${CMAKE_CURRENT_SOURCE_DIR}/15_compute_cubes_instanced.glsl -o ${CMAKE_CURRENT_BINARY_DIR}/15_compute_cubes_instanced.spv)
add_dependencies(15_compute_cubes 15_compute_cubes_instanced_spv)
add_custom_target(15_compute_cubes_pipelined_triangles_spv COMMAND ${GLSLANG_EXE} -V -S comp ${CMAKE_CURRENT_SOURCE_DIR}/15_compute_cubes_pipelined_triangles.glsl -o ${CMAKE_CURRENT_BINARY_DIR}/15_compute_cubes_pipelined_triangles.spv)
add_dependencies(15_compute_cubes 15_compute_cubes_pipelined_triangles_spv)
add_custom_target(15_compute_cubes_pipelined_raster_spv COMMAND ${GLSLANG_EXE} -V -S comp ${CMAKE_CURRENT_SOURCE_DIR}/15_compute_cubes_pipelined_raster.glsl -o ${CMAKE_CURRENT_BINARY_DIR}/15_compute_cubes_pipelined_raster.spv)
add_dependencies(15_compute_cubes 15_compute_cubes_pipelined_raster_spv)
